# cpp_tricks

./: CMakeLists.txt  README.md
modern_cpp_features/: make_tuple_easy_to_read.cpp  perfect_forwarding.cpp  variadic_templates.cpp
others/: class_acting_like_pointer.cpp  placement_new.cpp  virtual_constructor.cpp
templates/: compute_array_size_at_compiling_time.cpp  crtp_trick.cpp  dispatcher.cpp  tag_dispatching.cpp  tricks_of_overloading_on_universal_references.cpp
